clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/assign_to_borrowed_with_many_loops/assign_to_borrowed_with_many_loops.cbs
// RUN: %clang_cc1 -verify %s

void test() {
  int a = 1;
  if (a == 1) { a = 1; }
  if (a == 2) { a = 2; }
  if (a == 3) { a = 3; }
  if (a == 4) { a = 4; }
  if (a == 5) { a = 5; }
  if (a == 6) { a = 6; }
  if (a == 7) { a = 7; }
  if (a == 8) { a = 8; }
  if (a == 9) { a = 9; }
  if (a == 10) { a = 10; }
  if (a == 11) { a = 11; }
  if (a == 12) { a = 12; }
  if (a == 13) { a = 13; }
  if (a == 14) { a = 14; }
  if (a == 15) { a = 15; }
  if (a == 16) { a = 16; }
  if (a == 17) { a = 17; }
  if (a == 18) { a = 18; }
  if (a == 19) { a = 19; }
  if (a == 20) { a = 20; }
  if (a == 21) { a = 21; }
  int *borrow p = &mut a; // expected-note {{`a` is borrowed here}}
  a = 2; // expected-error {{cannot assign to `a` because it is borrowed}}
  *p = 3;
}
